RESPONSIVE - menu button mobile view and font size fix

--- a/src/Components/Menu/index.module.css
+++ b/src/Components/Menu/index.module.css
@@ -23,6 +23,10 @@
   text-decoration: none;
   margin-right: 1rem;
   font-weight: bolder;
+  font-size: 0.9em;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
 }
 
 #creative {
@@ -46,4 +50,14 @@
 
 #creative:active {
   box-shadow: none;
+}
+
+@media screen and (max-width: 780px) {
+  #creative {
+    box-shadow: -5px 5px 0px 0px var(--red);
+    transition: 0.2s ease-in;
+    touch-action: manipulation;
+    padding: 7px 5px 7px;
+    border-radius: 6px;
+  }
 }
